# planarBeamerProjection

./: LICENSE  README  README.md
planarBeamerProjection/: CMakeLists.txt  main.cpp
